Add travis secret

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "^15.3.0",
     "react-addons-test-utils": "^15.3.0",
     "react-dom": "^15.3.0",
+    "sg-travis": "^1.1.27",
     "stringcase": "^3.0.1"
   },
   "engines": {
